# todoist-refresher-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _deploy.py  main.py  not_found.txt  process.json  pyproject.toml  renovate.json  requirements.txt  ruff.toml  test.py
.github/: dependabot.yml
cd/: Chart.yaml  values.yaml
cd/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
cd/templates/tests/: test-connection.yaml
ci/: pipeline-template.yaml  pipeline.yaml
config/: api_documentation.py  bad_habit_config.json  databases_config.json  queries.py
helper/: config_helper.py  database_helper.py  date_helper.py  google_helper.py  network_helper.py  path_helper.py  web_helper.py
jobs/: bi_monthly.py  bi_weekly.py  daily.py  hourly.py  weekly.py
services/: database_service.py  file_service.py  ght_service.py  github_service.py  google_service.py  grabber_service.py  llm_service.py  microsoft_service.py  monica_database_service.py  monica_service.py  notion_service.py  obsidian_service.py  sqlite_service.py  telegram_service.py  todoist_history_service.py  todoist_service.py  tts_service.py  youtube_service.py
src/: main.py
src/config/: api_documentation.py  databases_config.json  queries.py
src/helper/: config_helper.py  database_helper.py  date_helper.py  google_helper.py  network_helper.py  path_helper.py  web_helper.py
src/jobs/: bi_monthly.py  bi_weekly.py  daily.py  hourly.py  monthly.py  weekly.py
src/services/: book_note_service.py  cubox_service.py  database_service.py  file_service.py  ght_service.py  github_service.py  google_service.py  grabber_service.py  microsoft_service.py  monica_database_service.py  monica_service.py  notion_service.py  obsidian_service.py  tandoor_service.py  telegram_service.py  todoist_history_service.py  todoist_service.py  tts_service.py  youtube_service.py
