[project]
name = "todoist-refresher-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "viertel97", email = "janik.viertel@outlook.com" },
]

dependencies = [
    "numpy==2.2.1",
    "pandas==2.2.3",
    "pytz==2024.2",
    "requests==2.32.3",
    "loguru==0.7.3",
    "pytube==15.0.0",
    "msal==1.31.1",
    "python-dotenv==1.0.1",
    "PyGithub==2.5.0",
    "python-telegram-bot==21.9",
    "uvicorn==0.34.0",
    "fastapi==0.115.6",
    "GitPython==3.1.43",
    "edge-tts==7.0.0",
    "langchain-groq==0.2.2",
    "python-dateutil==2.9.0.post0",
    "quarter-lib==0.0.37",
    "SQLAlchemy>=2.0.37",
    "psycopg>=3.2.12",
]
packages = [{ include = "todo", from = "src" }]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["pdm>=2.18.3", "pre-commit>=2.15.0"]
linting = ["ruff>=0.7.1"]
security = ["bandit>=1.7.10"]
type-checking = ["mypy>=1.13.0"]
testing = []
documentation = []

[tool.pdm.scripts]
install-pre-commit-msg-hook = "pre-commit install --hook-type commit-msg"

[tool.mypy]
# Exclude __init__.py files in src and tests directories
exclude = "^src/__init__.py$|^tests/__init__.py$"

[[tool.pdm.source]]
name = "Quarter-Lib-Old"
url = "https://Quarter-Lib-Old:${PAT}@pkgs.dev.azure.com/viertel/Quarter-Lib-Old/_packaging/Quarter-Lib-Old/pypi/simple/"
include_packages = ["quarter-lib-old"]